infra/k8s/auth-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-demo-auth-deployment
  template:
    metadata:
      labels:
        app: micro-demo-auth-deployment
    spec:
      containers:
        - name: micro-demo-auth-deployment
          imagePullPolicy: IfNotPresent
          image: irfan76k/micro-demo-auth
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-auth-service
spec:
  selector:
    app: micro-demo-auth-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
  # type: LoadBalancer
