infra/k8s/inventory&booking-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-inventory&booking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-demo-inventory&booking-deployment
  template:
    metadata:
      labels:
        app: micro-demo-inventory&booking-deployment
    spec:
      containers:
        - name: micro-demo-inventory&booking-deployment
          imagePullPolicy: IfNotPresent
          image: irfan76k/micro-demo-inventory&booknig
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-inventory&booking-service
spec:
  selector:
    app: micro-demo-inventory&booking-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  # type: LoadBalancer
