infra/k8s/mongo-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dunk-mongo
  template:
    metadata:
      labels:
        app: dunk-mongo
    spec:
      containers:
        - name: dunk-mongo
          imagePullPolicy: IfNotPresent
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-mongo-service
spec:
  selector:
    app: dunk-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
  type: LoadBalancer
