infra/k8s/notification-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-demo-notification
  template:
    metadata:
      labels:
        app: micro-demo-notification
    spec:
      containers:
        - name: micro-demo-notification
          imagePullPolicy: IfNotPresent
          image: irfan76k/micro-demo-notification
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-notification-service
spec:
  selector:
    app: micro-demo-notification
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  # type: LoadBalancer
