infra/k8s/payment-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-payment-deploayment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-demo-payment-deploayment
  template:
    metadata:
      labels:
        app: micro-demo-payment-deploayment
    spec:
      containers:
      - name: micro-demo-payment-deploayment
        imagePullPolicy: IfNotPresent
        image: micro-demo-payment
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-payment-service
spec:
  selector:
    app: micro-demo-payment-deploayment
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 8000
  # type: LoadBalancer
