infra/k8s/user-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-demo-user-deploayment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-demo-user-deploayment
  template:
    metadata:
      labels:
        app: micro-demo-user-deploayment
    spec:
      containers:
      - name: micro-demo-user-deploayment
        imagePullPolicy: Never
        image: irfan76k/micro-demo-user:1.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-demo-user-service
spec:
  selector:
    app: micro-demo-user-deploayment
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: LoadBalancer
