infra/k8s/ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: test-app.com
      http:
        paths:
          - path: /user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: micro-demo-user-service
                port:
                  number: 8000
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: micro-demo-auth-service
                port:
                  number: 8000
          # - path: /payment/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: micro-demo-payment-service
          #       port:
          #         number: 7000
